antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__experimental_features_view__tests__voice_runtime_unavailable.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
assertion_line: 229
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Antex server.
  No server experiments available.

  No experimental features available for now

  Press space to select or enter to save
